Import of ADAMK/Test-SubCalls-0.02 from CPAN.
gitpan-cpan-distribution: Test-SubCalls
gitpan-cpan-version:      0.02
gitpan-cpan-path:         ADAMK/Test-SubCalls-0.02.tar.gz
gitpan-cpan-author:       ADAMK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Test::SubCalls
 
+0.02 Sat Oct  8 2005
+	- Upgraded Test::Builder::Tester dependency
+
 0.01 Thu Sep  1 2005
 	- Created the initial version of the module
