--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Test::SubCalls
 
+0.03 Fri Dec 30 2004
+	- Noted version dependency is actually 5.006
+	  (This is ONLY because of Lex::HookWrap)
+
 0.02 Sat Oct  8 2005
 	- Upgraded Test::Builder::Tester dependency
 
