--- a/README
+++ b/README
@@ -77,15 +77,15 @@ SUPPORT
     author.
 
 AUTHOR
-    Adam Kennedy <cpan@ali.as>, <http://ali.as/>
+    Adam Kennedy <cpan@ali.as>
 
 SEE ALSO
-    Test::Builder, Test::More, Hook::LexWrap
+    <http://ali.as/>, Test::Builder, Test::More, Hook::LexWrap
 
 COPYRIGHT
-    Copyright (c) 2005 Adam Kennedy. All rights reserved. This program is
-    free software; you can redistribute it and/or modify it under the same
-    terms as Perl itself.
+    Copyright (c) 2005, 2006 Adam Kennedy. All rights reserved. This program
+    is free software; you can redistribute it and/or modify it under the
+    same terms as Perl itself.
 
     The full text of the license can be found in the LICENSE file included
     with this module.
