--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Test::SubCalls
 
+1.07 Fri 16 Nov 2007
+	- No functional changes
+	- Upgrading to Module::Install 0.68
+
 1.06 Fri 12 May 2006
 	- Moving to a stable version number
 	- Upgrading to Module::Install 0.62 final
