--- a/README
+++ b/README
@@ -20,7 +20,7 @@ SYNOPSIS
       sub_reset_all();
 
 DESCRIPTION
-    There are a number of different situations (like testing cacheing code)
+    There are a number of different situations (like testing caching code)
     where you want to want to do a number of tests, and then verify that
     some underlying subroutine deep within the code was called a specific
     number of times.
@@ -83,9 +83,10 @@ SEE ALSO
     <http://ali.as/>, Test::Builder, Test::More, Hook::LexWrap
 
 COPYRIGHT
-    Copyright (c) 2005, 2006 Adam Kennedy. This program is free software;
-    you can redistribute it and/or modify it under the same terms as Perl
-    itself.
+    Copyright 2005 - 2008 Adam Kennedy.
+
+    This program is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
 
     The full text of the license can be found in the LICENSE file included
     with this module.
