Import of ADAMK/Test-SubCalls-1.09 from CPAN.
gitpan-cpan-distribution: Test-SubCalls
gitpan-cpan-version:      1.09
gitpan-cpan-path:         ADAMK/Test-SubCalls-1.09.tar.gz
gitpan-cpan-author:       ADAMK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-Revision history for Perl extension Test::SubCalls
+Changes for Perl extension Test-SubCalls
+
+1.09 Sun 19 Apr 2009
+	- Upgrading to Module::Install::DSL 0.83
 
 1.08 Fri 22 Aug 2008
 	- No functional changes
